--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,34 @@
 .Application {
   font-family: sans-serif;
+}
+
+#todo-container{
   text-align: center;
 }
+
+#sub-header{
+  font-style: italic;
+  text-decoration : underline;
+}
+
+li{
+  padding: 5px;
+}
+
+#heading{
+  margin-bottom: 50px;
+}
+
+#removebtn{
+  margin: 10px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+#item-container:hover{
+  cursor: pointer;
+  background-color: lightgray;
+}
+
